# UBB-CS

./: .gitignore  README.md  package.json
Semester 1/Computer System Architecture/Labs/: a.asm  asc_lab2_ex2-27.asm  asc_lab2_ex3-27.asm  asc_lab2_ex4-27.asm  asc_lab2_ex5-27.asm  asc_lab2_ex_1-27.asm  asc_lab3_ex1-27.asm  asc_lab3_ex2-27.asm  asc_lab3_ex3-27_signed.asm  asc_lab3_ex3-27_unsigned.asm  b.asm  big_case.asm  lab11ex27.asm  lab8ex27_file.asm  lab8ex27_function.asm  lab8test.asm  main.c  module.asm  practic1.asm  practic2.asm  practicalexam.asm  seminar1.asm  seminar2.asm  seminar2_2.asm  seminar2_3.asm  seminar2_4.asm  small_case.asm  test1.asm  test23.asm  testlab4.asm
Semester 2/Data Structures & Algorithms/Labs/L2 SMM/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
Semester 2/Data Structures & Algorithms/Labs/L3 Map/: CMakeLists.txt  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp
Semester 2/Data Structures & Algorithms/Labs/L4 MultiMap/: CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
Semester 2/Data Structures & Algorithms/Labs/L5 Sorted Map/: CMakeLists.txt  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h
Semester 2/Graphs/Lab1/: Lab1Documentation.docx
Semester 2/Graphs/PW2/: practicalWork2Documentation.txt
Semester 2/Graphs/PW3/: Documentation.txt  Large graphs.txt
Semester 2/Graphs/PW4/: source code.txt
Semester 2/Graphs/PW5/: Source code + comments.txt
Semester 2/Objected-Oriented Programming/Practical Work/A10/: Action.h  ActionRemove.h  ActionUpdate.cpp  ActionUpdate.h  AdminCSVRepo.h  CMakeLists.txt  CSVRepo.cpp  FileException.h  HTMLRepo.h  MenuValidator.h  MovieException.h  MovieTableView.h  RepoException.h  RepoValidator.h  domain.h  repo.cpp  repo.h
Semester 2/Objected-Oriented Programming/Practical Work/AppliancesStore/: Appliance.cpp  Appliance.h  CMakeLists.txt  Refrigerator.cpp  Refrigerator.h  Service.cpp  Service.h  UI.cpp  UI.h  WashingMachine.cpp  WashingMachine.h  main.cpp
Semester 2/Objected-Oriented Programming/Practical Work/oop-t2-RiKy252/: CMakeLists.txt  Car.cpp  Car.h  ElectricEngine.cpp  ElectricEngine.h  Engine.cpp  Engine.h  Service.cpp  Service.h  TurboEngine.cpp  TurboEngine.h  UI.cpp  UI.h  test.cpp
Semester 2/Operating Systems/awk/: 1  1.awk  10.awk  2.awk  3.awk  4.awk  5.awk  6.awk  7.awk  8.awk  9.awk  fisier1  fisier10  fisier2  fisier3  fisier5  fisier6  fisier9
Semester 2/Operating Systems/grep/: 1  2  3  4  5  grep1  grep2  grep3  grep4  grep5
Semester 2/Operating Systems/grep$sed$awk/: awk.txt
Semester 2/Operating Systems/parallelprog/: ex1.c  ex2.c  ex3.c  fork4.c  lab.c
Semester 3/Advanced Programming Methods/: log4.txt  log5.txt
Semester 3/Advanced Programming Methods/Toy Language/: log1.txt  log10.txt  log11.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt
Semester 3/Advanced Programming Methods/ToyLanguageGUI/: log.txt
Semester 3/Advanced Programming Methods/src/: Interpreter.java
Semester 3/Computer Networks/Packet Tracer/: FullProject.pkt  HWLab7.pkt  NAT.pkt  NAT.txt  RIP.txt  RIPlearning.pkt  Router DHCP.txt  Subnetting.txt  Test2.pkt  introduction.pkt  lab11.pkt  lab5.pkt  lab5hw.pkt  testPractice.pkt
Semester 3/Computer Networks/Test1Recap/: exampleClient.py  lab3ex5.py  lab3multiplexClient.py  lab3multiplexServer.py  lab3multiplexUDPClient.py
Semester 3/Databases/: LabSQL.sql
Semester 3/Databases/Labs theory/: a2 theory.txt  a3 theory.txt
Semester 3/Databases/Practice/: PracticeSQL.sql
Semester 3/Databases/Seminars/: Seminar2.txt  Seminar3.txt  Seminar4.txt  Seminar6.txt
Semester 3/Retele/Test1Recap/: lab3multiplexUDPServer.py
Semester 4/AI/Lab1/: Lab1.ipynb
Semester 4/AI/Mini-Project/: Documenation.md  sol.ipynb
Semester 4/MPP/Lab/: FrameworkComparison.md  README.md
Semester 5/LFTC/Lex files/: Pascal.doc  RegExp.doc
Semester 5/PDP/Exam-Prep/: ex-1-2.odt  ex3-example  ex3-example-simplified  ex3-example-simplified.cpp  ex3-example.cpp  feb2023-subj1-ex3  feb2023-subj1-ex3.cpp  matrix-mul  matrix-mul.cpp  matrix-sum  matrix-sum.cpp  prime-parallel  prime-parallel.cpp  scalar-product  scalar-product-threads  scalar-product-threads.cpp  scalar-product.cpp
Semester 5/PDP/Lab1/: Inventory.java  MoveWorker.java  WarehouseManager.java
Semester 5/PDP/Lab2/: ConsumerTask.java  ProducerTask.java  ProductQueue.java  ScalarProductManager.java
Semester 5/PDP/Lab3/: Matrix.java  MatrixMultiplier.java  MatrixWorker.java
Semester 5/PDP/Lab4/: HttpUtils.cs  Program.cs  SocketExtensions.cs  Sol1_CallbackDownloader.cs  Sol2_TaskDownloader.cs  Sol3_AsyncAwaitDownloader.cs
Semester 5/PDP/Lab5/: Documentation.md  KaratsubaMultiplication.java  Main.java  Polynomial.java  SimpleMultiplication.java
Semester 5/PDP/Lab6/: Documentation.md  Graph.java  HamiltonianClassic.java  HamiltonianForkJoin.java  Main.java
Semester 5/PDP/Lab7/: Documentation.md  mpi_polynomial.cpp  sal.h
Semester 5/PDP/Lab8/: DSM.h  dsm_app  main.cpp
Semester 5/PDP/Project/: HoughDocumentation.md  hough  hough_mpi  hough_mpi.cpp  hough_threads  hough_threads.cpp  input.pgm  input2.pgm  input3.pgm
Semester 5/RPA/GuessNumberSeq/: Main.xaml  project.json
Semester 5/RPA/MathQuizApp/: Main.xaml  MainSeq.xaml  project.json
Semester 5/RPA/MathQuizApp_Updated/: GetUserInput.xaml  Main.xaml  RunQuiz.xaml  ShowScores.xaml  project.json  (+2 more)
(+923 files in other folders)
